[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
serde = {version = "1.0.117", features = ["derive"]}
serde_json="1.0.59"
# bitcoincore-rpc = "0.14.0"
bitcoincore-rpc = { path = "/Users/theophilus/Desktop/rust-bitcoincore-rpc/client" }
bitcoincore-rpc-json = "0.14.0"

log = "0.4.5"
jsonrpc = "0.12.0"
lazy_static = "1.4.0"